--- a/albuns.html
+++ b/albuns.html
@@ -9,9 +9,12 @@
     <title>Teste Técnico Padawans</title>
 </head>
 <body>
-
     <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Início</a>
+        <div class="title">
+            <h3>Albums |</h3>
+            <a class="navbar-brand" href="index.html">Início</a>
+            
+        </div>
       </nav>
 
     <div class="container">
