--- a/postagens.html
+++ b/postagens.html
@@ -12,7 +12,7 @@
 
     <nav class="navbar navbar-light bg-light">
         <div class="title">
-            <h3>Postagens - </h3>
+            <h3>Postagens |</h3>
             <a class="navbar-brand" href="index.html">Início</a>
             
         </div>
@@ -33,11 +33,9 @@
     </div>
     <script>
         fetch('https://jsonplaceholder.typicode.com/posts')
-        .then(res=>{
-            res.json().then(
-                data=>{
-                    console.log(data);
-                    if(data.length > 0){
+        .then(res=>{res.json()
+            .then(data=>{console.log(data);
+                    if(data.length >  0){
                         var temp = "";
 
                         data.forEach((u)=>{
