--- a/todos.html
+++ b/todos.html
@@ -11,7 +11,11 @@
 <body>
 
     <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Início</a>
+        <div class="title">
+            <h3>Todos |</h3>
+            <a class="navbar-brand" href="index.html">Início</a>
+            
+        </div>
       </nav>
 
     <div class="container">
